--- a/DanfossHeating/App.axaml
+++ b/DanfossHeating/App.axaml
@@ -2,15 +2,21 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="DanfossHeating.App"
              xmlns:local="using:DanfossHeating"
+             xmlns:converters="using:DanfossHeating.Converters"
              RequestedThemeVariant="Light">
-             
+
+    <Application.Resources>
+        <converters:EnumToStringConverter x:Key="EnumToStringConverter"/>
+        <converters:BooleanToStringConverter x:Key="BooleanToStringConverter"/>
+    </Application.Resources>
+
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
-  
+
     <Application.Styles>
         <FluentTheme />
     </Application.Styles>
-    
+
     <!-- Make sure there are no references to PageTemplate here -->
 </Application>
