--- a/DanfossHeating/Views/MachineryPage.axaml
+++ b/DanfossHeating/Views/MachineryPage.axaml
@@ -537,7 +537,7 @@
                                         BorderThickness="0,0,0,3"
                                         BoxShadow="{Binding Path=(views:MachineryPage.IsDarkTheme), ElementName=MachineryPageControl, Converter={StaticResource BoolToColorConverter}, ConverterParameter='0 4 15 0 #60000000:0 4 15 0 #25000000'}"
                                         CornerRadius="8">
-                                        <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
+                                        <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto">
                                             <!-- Warning Banner -->
                                             <Border 
                                                 Grid.Row="0"
@@ -602,31 +602,59 @@
                                                     <ColumnDefinition Width="*"/>
                                                 </Grid.ColumnDefinitions>
                                                 
-                                                <Border
-                                                    Width="36"
-                                                    Height="36"
-                                                    Background="{Binding Path=(views:MachineryPage.IsDarkTheme), ElementName=MachineryPageControl, Converter={StaticResource BoolToColorConverter}, ConverterParameter='#40D40000:#15D40000'}"
-                                                    CornerRadius="18"
-                                                    VerticalAlignment="Center">
+                                                <Grid>
+                                                    <Border
+                                                        Width="36"
+                                                        Height="36"
+                                                        Background="#D40000"
+                                                        CornerRadius="18"
+                                                        VerticalAlignment="Center"
+                                                        Opacity="0.2"/>
                                                     <PathIcon
                                                         Width="20"
                                                         Height="20"
                                                         Data="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.21,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.21,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.67 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z"
-                                                        Foreground="{Binding Path=(views:MachineryPage.IsDarkTheme), ElementName=MachineryPageControl, Converter={StaticResource BoolToColorConverter}, ConverterParameter='#FF7070:#D40000'}"/>
-                                                </Border>
+                                                        Foreground="#D40000"/>
+                                                </Grid>
                                                 
-                                                <TextBlock
-                                                    Grid.Column="1"
-                                                    Margin="8,0,0,0"
-                                                    VerticalAlignment="Center"
-                                                    FontSize="16"
-                                                    FontWeight="Bold"
-                                                    Foreground="{Binding Path=(views:MachineryPage.IsDarkTheme), ElementName=MachineryPageControl, Converter={StaticResource BoolToColorConverter}, ConverterParameter='#FFFFFF:#D40000'}"
-                                                    Text="{Binding Name}"/>
+                                                <StackPanel Grid.Column="1" Margin="8,0,0,0" Spacing="2">
+                                                    <TextBlock
+                                                        VerticalAlignment="Center"
+                                                        FontSize="16"
+                                                        FontWeight="Bold"
+                                                        Foreground="#D40000"
+                                                        Text="{Binding Name}"/>
+                                                    <TextBlock
+                                                        VerticalAlignment="Center"
+                                                        FontSize="12"
+                                                        Foreground="{Binding Path=(views:MachineryPage.IsDarkTheme), ElementName=MachineryPageControl, Converter={StaticResource BoolToColorConverter}, ConverterParameter='#B0B0B0:#666666'}"
+                                                        Text="{Binding Name, Converter={x:Static vm:MachineryViewModel.MachineTypeNameConverter}}"/>
+                                                </StackPanel>
                                             </Grid>
 
+                                            <!-- Maintenance Date Label -->
+                                            <Border
+                                                Grid.Row="3"
+                                                Background="{Binding Path=(views:MachineryPage.IsDarkTheme), ElementName=MachineryPageControl, Converter={StaticResource BoolToColorConverter}, ConverterParameter='#2A2A2A:#F8F8F8'}"
+                                                BorderThickness="0"
+                                                CornerRadius="4"
+                                                Margin="12,0,12,12"
+                                                Padding="8,6">
+                                                <StackPanel Orientation="Horizontal" Spacing="6">
+                                                    <PathIcon
+                                                        Width="14"
+                                                        Height="14"
+                                                        Data="M19,3H18V1H16V3H8V1H6V3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19M19,6H5V5H19M7,10H12V15H7"
+                                                        Foreground="#D40000"/>
+                                                    <TextBlock
+                                                        FontSize="12"
+                                                        Foreground="{Binding Path=(views:MachineryPage.IsDarkTheme), ElementName=MachineryPageControl, Converter={StaticResource BoolToColorConverter}, ConverterParameter='#E0E0E0:#666666'}"
+                                                        Text="{Binding Name, Converter={StaticResource MaintenanceDateConverter}}"/>
+                                                </StackPanel>
+                                            </Border>
+
                                             <!-- Machine Data -->
-                                            <Grid Grid.Row="3" Margin="12,0,12,12" RowDefinitions="Auto,Auto,Auto,Auto,Auto">
+                                            <Grid Grid.Row="4" Margin="12,0,12,12" RowDefinitions="Auto,Auto,Auto,Auto,Auto">
                                                 <!-- Heat Output MW -->
                                                 <Grid Grid.Row="0" Margin="0,0,0,8">
                                                     <TextBlock
@@ -767,10 +795,13 @@
                                                         />
                                                 </Grid>
                                             </Grid>
-                                            
+
+                                            <!-- Add spacing before buttons -->
+                                            <Border Grid.Row="5" Height="35"/>
+
                                             <!-- Save Button -->
                                             <Button 
-                                                Grid.Row="4"
+                                                Grid.Row="6"
                                                 Margin="12,0,12,12"
                                                 HorizontalAlignment="Stretch"
                                                 HorizontalContentAlignment="Center"
@@ -780,12 +811,13 @@
                                                 Padding="0,8"
                                                 x:Name="SaveButton"
                                                 Click="SaveButton_Click"
-                                                Tag="{Binding}">
+                                                Tag="{Binding}"
+                                                ZIndex="2">
                                                 <StackPanel Orientation="Horizontal" Spacing="8">
                                                     <PathIcon
                                                         Width="16"
                                                         Height="16"
-                                                        Data="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z"
+                                                        Data="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5H10v4z"
                                                         Foreground="White" />
                                                     <TextBlock Text="Save Changes" />
                                                 </StackPanel>
@@ -793,7 +825,7 @@
                                             
                                             <!-- Disable Button -->
                                             <Button 
-                                                Grid.Row="5"
+                                                Grid.Row="7"
                                                 Margin="12,0,12,12"
                                                 HorizontalAlignment="Stretch"
                                                 HorizontalContentAlignment="Center"
@@ -803,7 +835,8 @@
                                                 Padding="0,8"
                                                 x:Name="DisableEnableButton"
                                                 Click="ToggleEnableButton_Click"
-                                                Tag="{Binding}">
+                                                Tag="{Binding}"
+                                                ZIndex="1">
                                                 <StackPanel Orientation="Horizontal" Spacing="8">
                                                     <PathIcon
                                                         Width="16"
